--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
-    "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
-    "nodemon": "^1.11.0",
-    "pg": "^7.3.0"
+    "nodemon": "^1.11.0"
   },
   "devDependencies": {
     "axios": "^0.17.0",
