--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0"
