--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "mongoose": "^4.13.7",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "socket.io": "^2.0.4",
