--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "mongoose": "^4.13.7",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
@@ -44,6 +45,7 @@
     "es6-promise": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "highcharts": "^6.0.4",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.28.0",
     "html-webpack-plugin-remove": "0.0.3",
@@ -58,6 +60,7 @@
     "react-async-component": "^1.0.2",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^16.0.0",
+    "react-highcharts": "^15.0.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^3.0.2",
