--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "html-webpack-plugin": "^2.28.0",
     "html-webpack-plugin-remove": "0.0.3",
     "imagemin-webpack-plugin": "^1.5.2",
+    "is-online": "^7.0.0",
     "jquery": "^3.2.1",
     "material-ui": "^0.19.4",
     "node-sass": "^4.5.3",
