--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "mailgun-js": "^0.14.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.7",
     "morgan": "^1.8.2",
